<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/ivBackgroundLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_background" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="271dp"
        android:layout_height="63dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/ti_email_hint"
        android:textColorHint="#A7A7A7"
        app:boxStrokeColor="#EAEAEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="#5B5B5B"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- La contraseña es visible por defecto, hay que ocultarla y que el toggle la muestre-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="271dp"
        android:layout_height="63dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/ti_password_hint"
        android:textColorHint="#A7A7A7"
        app:endIconMode="password_toggle"
        app:boxStrokeColor="#EAEAEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="#5B5B5B"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bLogin"
        android:layout_width="271dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/b_login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiPassword" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="286dp"
        android:layout_height="66dp"
        android:text="@string/tv_login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/tiEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407" />

    <ImageButton
        android:id="@+id/ibGoogleLogin"
        android:layout_width="271dp"
        android:layout_height="55dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/google_icon"
        android:contentDescription="Iniciar sesión con Google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>