<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/ivBackgroundHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/app_background" />

    <ImageButton
        android:id="@+id/ibAccount"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#97CEE4"
        android:contentDescription="Mi cuenta"
        android:padding="20dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/ibSearch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_icon" />

    <ImageButton
        android:id="@+id/ibSearch"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#F8F7AA"
        android:contentDescription="Buscar producto"
        android:padding="30dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ibAccount"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/search_product" />

    <ImageButton
        android:id="@+id/ibScan"
        android:layout_width="375dp"
        android:layout_height="80dp"
        android:layout_marginTop="7dp"
        android:backgroundTint="#FFBEBE"
        android:contentDescription="Escanear producto"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibAccount"
        app:srcCompat="@drawable/scan" />

    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/tv_account"
        android:textColor="#37474F"
        app:layout_constraintBottom_toBottomOf="@+id/ibAccount"
        app:layout_constraintEnd_toEndOf="@+id/ibAccount"
        app:layout_constraintStart_toStartOf="@+id/ibAccount" />

    <TextView
        android:id="@+id/tvSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/tv_search"
        app:layout_constraintBottom_toBottomOf="@+id/ibSearch"
        app:layout_constraintEnd_toEndOf="@+id/ibSearch"
        app:layout_constraintStart_toStartOf="@+id/ibSearch" />

    <TextView
        android:id="@+id/tvScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/tv_scan"
        android:textColor="#6D4C41"
        app:layout_constraintBottom_toBottomOf="@+id/ibScan"
        app:layout_constraintEnd_toEndOf="@+id/ibScan"
        app:layout_constraintStart_toStartOf="@+id/ibScan" />

</androidx.constraintlayout.widget.ConstraintLayout>